Fix for spacing quote

--- a/src/AppBundle/Resources/public/rebrand/sass/pages/homepage.scss
+++ b/src/AppBundle/Resources/public/rebrand/sass/pages/homepage.scss
@@ -133,9 +133,10 @@
 }
 
 .reviews {
+    overflow: hidden;
 
     &__image__mobile {
-        transform: translateX(20px);
+        transform: translateX(30px);
 
         @include media-breakpoint-up(md) {
             transform: none;
